tests/valid/noSetters.ts
// @ts-nocheck
class MyClass {
	setValue(v: number) {
		this._value = v;
	}
}
