tests/invalid/noFunctionExpressionName.ts
// @ts-nocheck
const fn = function myFunc(x: number) {
	return x;
};
